   repository check configuration. This tells Borg to interrupt a repository check after a certain
   duration.
 * #860: Fix interaction between environment variable interpolation in constants and shell escaping.
 * #863: When color output is disabled (explicitly or implicitly), don't prefix each log line with
   the log level.
 * #866: Fix "Argument list too long" error in the "spot" check when checking hundreds of thousands
   of files at once.
 * #874: Add the configured repository label as "repository_label" to the interpolated variables
   passed to before/after command hooks.
 * #881: Fix "Unrecognized argument" error when the same value is used with different command-line
   flags.
 * In the "spot" check, don't try to hash symlinked directories.

1.8.11
 * #815: Add optional Healthchecks auto-provisioning via "create_slug" option.
 * #851: Fix lack of file extraction when using "extract --strip-components all" on a path with a
   leading slash.
 * #854: Fix a traceback when the "data" consistency check is used.
 * #857: Fix a traceback with "check --only spot" when the "spot" check is unconfigured.

1.8.10
 * #656 (beta): Add a "spot" consistency check that compares file counts and contents between your
   source files and the latest archive, ensuring they fall within configured tolerances. This can
   catch problems like incorrect excludes, inadvertent deletes, files changed by malware, etc. See
   the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/deal-with-very-large-backups/#spot-check
 * #779: When "--match-archives *" is used with "check" action, don't skip Borg's orphaned objects
   check.
 * #842: When a command hook exits with a soft failure, ping the log and finish states for any
   configured monitoring hooks.
 * #843: Add documentation link to Loki dashboard for borgmatic:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#loki-hook